# sospt3g

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: cmake.yml  deploy_wheels.yml  test_conda.yml  test_wheels.yml  wheels.yml
core/python/: dataextensions.py  docparser.py  fileio.py  frameextensions.py  g3decorators.py  g3logging.py  modconstruct.py  multiprocess.py  quatextensions.py  timestreamextensions.py  util.py
core/src/: G3TimeStamp.cxx
patches/: circular_imports.patch  sys_time.patch
so/: CMakeLists.txt
so/include/so/: so3g_numpy.h
wheels/: install_deps_linux.sh  install_deps_osx.sh  repair_wheel_linux.sh  repair_wheel_macos.sh  test_local_cibuildwheel.sh
